--- a/package.json
+++ b/package.json
@@ -2,14 +2,28 @@
   "name": "magic-vacation",
   "version": "1.0.0",
   "description": "Личный проект «Таинственный отпуск» от HTML Academy",
+  "scripts": {
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint \"source/scss/**/*.scss\" --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
+    "build": "webpack",
+    "webp": "gulp webp",
+    "sprite": "gulp sprite",
+    "start": "webpack-dev-server --open"
+  },
+  "dependencies": {
+    "normalize.css": "8.0.1",
+    "swiper": "5.3.8",
+    "three": "0.115.0"
+  },
   "devDependencies": {
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "@htmlacademy/editorconfig-cli": "1.0.0",
     "copy-webpack-plugin": "5.1.1",
     "css-loader": "3.5.1",
     "csso-webpack-plugin": "2.0.0-beta.1",
     "eslint": "6.5.1",
     "eslint-config-htmlacademy": "0.5.2",
-    "gulp": "4.0.x",
+    "gulp": "4.0.2",
     "gulp-imagemin": "5.0.3",
     "gulp-rename": "1.4.0",
     "gulp-svgstore": "7.0.1",
@@ -25,22 +39,13 @@
     "sass": "1.32.8",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
-    "stylelint": "9.10.x",
-    "stylelint-config-htmlacademy": "0.1.x",
-    "stylelint-scss": "^3.19.0",
+    "stylelint": "9.10.1",
+    "stylelint-config-htmlacademy": "0.1.4",
+    "stylelint-scss": "3.19.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3",
     "write-file-webpack-plugin": "4.5.1"
-  },
-  "scripts": {
-    "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/scss/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
-    "build": "webpack",
-    "webp": "gulp webp",
-    "sprite": "gulp sprite",
-    "start": "webpack-dev-server --open"
   },
   "browserslist": [
     "last 2 versions",
@@ -53,10 +58,5 @@
     "source/js/**/*.js",
     "source/img/**/*.svg",
     "source/sass/**/*.{sass,scss}"
-  ],
-  "dependencies": {
-    "normalize.css": "8.0.1",
-    "swiper": "5.3.8",
-    "three": "0.115.0"
-  }
+  ]
 }
